--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "dompurify": "^3.2.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^7.6.3",
@@ -18,6 +19,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
+        "@types/dompurify": "^3.0.5",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
         "@types/react-router-dom": "^5.3.3",
