--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@fullcalendar/google-calendar": "^6.1.19",
         "@fullcalendar/interaction": "^6.1.19",
         "@fullcalendar/react": "^6.1.19",
+        "axios": "^1.11.0",
         "dompurify": "^3.2.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
